[package]
name = "wits"
version = "0.1.0"
edition = "2021"
authors = [ "Dalvany" ]
description = "A tool to have some informations about a Tantivy index"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wits"
path = "src/wits.rs"

[dependencies]
clap = { version = "4.0.11", features = ["derive"] }
tantivy = "0.18"
